GitOps/togglemaster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster
  namespace: evaluation
  # Remova a annotation global de rewrite-target
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 80
          - path: /targeting
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 80
          - path: /eval(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-service
                port:
                  number: 80
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 80
